// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App router sends you to bydel alle 1`] = `
<div
  id="app"
>
  <aside
    id="navbar"
  >
    <img
      alt="oslo-logo"
      class="oslo__logo"
      src="[object Object]"
    />
     
    <nav
      role="navigation"
    >
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-gamleoslo"
          type="checkbox"
          value="1"
        />
         
        <label
          for="checkbox-gamleoslo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          type="checkbox"
          value="2"
        />
         
        <label
          for="checkbox-grunerlokka"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sagene"
          type="checkbox"
          value="3"
        />
         
        <label
          for="checkbox-sagene"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          type="checkbox"
          value="4"
        />
         
        <label
          for="checkbox-sthanshaugen"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          type="checkbox"
          value="5"
        />
         
        <label
          for="checkbox-frogner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          type="checkbox"
          value="6"
        />
         
        <label
          for="checkbox-ullern"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          type="checkbox"
          value="7"
        />
         
        <label
          for="checkbox-vestreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          type="checkbox"
          value="8"
        />
         
        <label
          for="checkbox-nordreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          type="checkbox"
          value="9"
        />
         
        <label
          for="checkbox-bjerke"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          type="checkbox"
          value="10"
        />
         
        <label
          for="checkbox-grorud"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          type="checkbox"
          value="11"
        />
         
        <label
          for="checkbox-stovner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          type="checkbox"
          value="12"
        />
         
        <label
          for="checkbox-alna"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          type="checkbox"
          value="13"
        />
         
        <label
          for="checkbox-ostensjo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          type="checkbox"
          value="14"
        />
         
        <label
          for="checkbox-nordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          type="checkbox"
          value="15"
        />
         
        <label
          for="checkbox-sondrenordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </div>
       
      <div
        class="navigation-link navigation-link__label-compare navigation-link--active"
        id="sammenlign"
      >
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="#/bydel/alle"
          id="sammenlign-href"
        >
          Sammenlign bydeler
        </a>
      </div>
       
      <div
        class="navigation-drawer__buttons"
        name="fade"
      >
        <div
          class="navigation-drawer__button-container"
        >
          <button
            aria-label="select all checkboxes"
            class="navigation-drawer__button"
          >
            
            Velg alle
          
          </button>
           
          <button
            aria-label="unselect all checkboxes"
            class="navigation-drawer__button"
            disabled="disabled"
          >
            
            Fjern alle
          
          </button>
        </div>
         
        <div
          class="navigation-drawer__select-container"
        >
          <label
            class="hidden-label"
            for="predefined-select"
          >
            Velg byområde
          </label>
           
          <select
            class="navigation-drawer__select"
            id="navigation-drawer-select"
          >
            <option
              disabled="disabled"
              id="predefined-select"
              value=""
            >
              - Forhåndsvalg -
            </option>
            <option
              id="predefined-select"
              value="4,5,6,7,8"
            >
              Vest
            </option>
            <option
              id="predefined-select"
              value="1,2,3,9,10,11,12,13,14,15"
            >
              Øst
            </option>
            <option
              id="predefined-select"
              value="1,2,3,4,5"
            >
              Indre by
            </option>
            <option
              id="predefined-select"
              value="1,2,3"
            >
              Indre by øst
            </option>
            <option
              id="predefined-select"
              value="4,5"
            >
              Indre by vest
            </option>
            <option
              id="predefined-select"
              value="6,7,8,9,10,11,12,13,14,15"
            >
              Ytre by
            </option>
            <option
              id="predefined-select"
              value="6,7,8"
            >
              Ytre by vest
            </option>
            <option
              id="predefined-select"
              value="9,10,11,12"
            >
              Ytre by øst
            </option>
            <option
              id="predefined-select"
              value="13,14,15"
            >
              Ytre by sør
            </option>
            <option
              id="predefined-select"
              value="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15"
            >
              Velg alle
            </option>
          </select>
        </div>
      </div>
    </nav>
  </aside>
   
  <div
    id="content"
  >
    <header
      class="oslo__navigation-topbar"
    >
      <a
        class="oslo__navigation-topbar-button router-link-active"
        href="#/"
        id="backButton"
      >
        <i
          class="material-icons oslo__topbar"
        >
          arrow_back
        </i>
         
        <h4
          class="oslo__topbar oslo__topbar-text"
        >
          Sammenligne bydeler
        </h4>
      </a>
       
      <div
        class="navigation-topbar"
      >
        <button
          class="navigation-topbar__select"
          id="select"
        >
          <label
            class="label"
          >
            Velg tema
          </label>
           
          <span>
            
          </span>
           
          <i
            class="material-icons"
          >
            arrow_drop_down
          </i>
        </button>
         
        <!---->
      </div>
    </header>
     
    <main>
      <div
        class="main-container"
      >
        <div
          class="main-container__cards"
        >
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/folkemengde"
              id="folkemengde"
              style="background-image: url(/img/folkemengde.png); background-color: rgb(255, 129, 116);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(245, 173, 165);"
              >
                
      Befolkning
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Folkemengde
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/alder"
              id="alder"
              style="background-image: url(/img/alder.png); background-color: rgb(255, 129, 116);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(245, 173, 165);"
              >
                
      Befolkning
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Alder
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/innvandrerbefolkningen"
              id="innvandrerbefolkningen"
              style="background-image: url(/img/innvandring.png); background-color: rgb(255, 129, 116);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(245, 173, 165);"
              >
                
      Befolkning
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Innvandrer­befolkningen
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/husholdninger"
              id="husholdninger"
              style="background-image: url(/img/husholdninger.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Husholdninger
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/trangboddhet"
              id="trangboddhet"
              style="background-image: url(/img/trangboddhet.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Trangboddhet
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/eierform"
              id="eierform"
              style="background-image: url(/img/eierform.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Eierform
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/kommunaleboliger"
              id="kommunaleboliger"
              style="background-image: url(/img/kommunale-boliger.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Kommunale boliger
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/flytting"
              id="flytting"
              style="background-image: url(/img/flytting.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Flytting
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/bygningstyper"
              id="bygningstyper"
              style="background-image: url(/img/bygningstyper.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Bygningstyper
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/boligpriser"
              id="boligpriser"
              style="background-image: url(/img/boligpriser.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Boligpriser
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/levekaar"
              id="levekaar"
              style="background-image: url(/img/levekaar.png); background-color: rgb(248, 198, 107);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(244, 206, 138);"
              >
                
      Levekår
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Levekår
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="main-container__map"
        >
          <h3>
            Bydelskart
          </h3>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`App router sends you to bydel sagene 1`] = `
<div
  id="app"
>
  <aside
    id="navbar"
  >
    <img
      alt="oslo-logo"
      class="oslo__logo"
      src="[object Object]"
    />
     
    <nav
      role="navigation"
    >
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-gamleoslo"
          type="checkbox"
          value="1"
        />
         
        <label
          for="checkbox-gamleoslo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          type="checkbox"
          value="2"
        />
         
        <label
          for="checkbox-grunerlokka"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </div>
      <div
        class="navigation-link navigation-link--active"
      >
        <input
          disabled="disabled"
          id="checkbox-sagene"
          type="checkbox"
          value="3"
        />
         
        <label
          for="checkbox-sagene"
        />
         
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="#/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          type="checkbox"
          value="4"
        />
         
        <label
          for="checkbox-sthanshaugen"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          type="checkbox"
          value="5"
        />
         
        <label
          for="checkbox-frogner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          type="checkbox"
          value="6"
        />
         
        <label
          for="checkbox-ullern"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          type="checkbox"
          value="7"
        />
         
        <label
          for="checkbox-vestreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          type="checkbox"
          value="8"
        />
         
        <label
          for="checkbox-nordreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          type="checkbox"
          value="9"
        />
         
        <label
          for="checkbox-bjerke"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          type="checkbox"
          value="10"
        />
         
        <label
          for="checkbox-grorud"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          type="checkbox"
          value="11"
        />
         
        <label
          for="checkbox-stovner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          type="checkbox"
          value="12"
        />
         
        <label
          for="checkbox-alna"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          type="checkbox"
          value="13"
        />
         
        <label
          for="checkbox-ostensjo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          type="checkbox"
          value="14"
        />
         
        <label
          for="checkbox-nordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          type="checkbox"
          value="15"
        />
         
        <label
          for="checkbox-sondrenordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </div>
       
      <div
        class="navigation-link navigation-link__label-compare"
        id="sammenlign"
      >
        <a
          class="navigation-link__label"
          href="#/bydel/alle"
          id="sammenlign-href"
        >
          Sammenlign bydeler
        </a>
      </div>
       
      <!---->
    </nav>
  </aside>
   
  <div
    id="content"
  >
    <header
      class="oslo__navigation-topbar"
    >
      <a
        class="oslo__navigation-topbar-button router-link-active"
        href="#/"
        id="backButton"
      >
        <i
          class="material-icons oslo__topbar"
        >
          arrow_back
        </i>
         
        <h4
          class="oslo__topbar oslo__topbar-text"
        >
          Bydel Sagene
        </h4>
      </a>
       
      <div
        class="navigation-topbar"
      >
        <button
          class="navigation-topbar__select"
          id="select"
        >
          <label
            class="label"
          >
            Velg tema
          </label>
           
          <span>
            
          </span>
           
          <i
            class="material-icons"
          >
            arrow_drop_down
          </i>
        </button>
         
        <!---->
      </div>
    </header>
     
    <main>
      <div
        class="main-container"
      >
        <div
          class="main-container__cards"
        >
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/folkemengde"
              id="folkemengde"
              style="background-image: url(/img/folkemengde.png); background-color: rgb(255, 129, 116);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(245, 173, 165);"
              >
                
      Befolkning
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Folkemengde
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/alder"
              id="alder"
              style="background-image: url(/img/alder.png); background-color: rgb(255, 129, 116);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(245, 173, 165);"
              >
                
      Befolkning
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Alder
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/innvandrerbefolkningen"
              id="innvandrerbefolkningen"
              style="background-image: url(/img/innvandring.png); background-color: rgb(255, 129, 116);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(245, 173, 165);"
              >
                
      Befolkning
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Innvandrer­befolkningen
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/husholdninger"
              id="husholdninger"
              style="background-image: url(/img/husholdninger.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Husholdninger
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/trangboddhet"
              id="trangboddhet"
              style="background-image: url(/img/trangboddhet.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Trangboddhet
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/eierform"
              id="eierform"
              style="background-image: url(/img/eierform.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Eierform
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/kommunaleboliger"
              id="kommunaleboliger"
              style="background-image: url(/img/kommunale-boliger.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Kommunale boliger
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/flytting"
              id="flytting"
              style="background-image: url(/img/flytting.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Flytting
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/bygningstyper"
              id="bygningstyper"
              style="background-image: url(/img/bygningstyper.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Bygningstyper
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/boligpriser"
              id="boligpriser"
              style="background-image: url(/img/boligpriser.png); background-color: rgb(66, 248, 182);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(199, 247, 201);"
              >
                
      Bomiljø
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Boligpriser
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
          <div
            class="main-container__item"
          >
            <a
              class="oslo__card-image"
              href="#/bydel/alle/levekaar"
              id="levekaar"
              style="background-image: url(/img/levekaar.png); background-color: rgb(248, 198, 107);"
            >
              <span
                class="oslo__category"
                style="background-color: rgb(244, 206, 138);"
              >
                
      Levekår
    
              </span>
               
              <span
                class="oslo__tema"
              >
                Levekår
              </span>
               
              <span
                class="oslo__see-more-text"
              >
                Se mer
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="main-container__map"
        >
          <h3>
            Bydelskart
          </h3>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`App router sends you to homepage 1`] = `
<div
  id="app"
>
  <aside
    id="navbar"
  >
    <img
      alt="oslo-logo"
      class="oslo__logo"
      src="[object Object]"
    />
     
    <nav
      role="navigation"
    >
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-gamleoslo"
          type="checkbox"
          value="1"
        />
         
        <label
          for="checkbox-gamleoslo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          type="checkbox"
          value="2"
        />
         
        <label
          for="checkbox-grunerlokka"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sagene"
          type="checkbox"
          value="3"
        />
         
        <label
          for="checkbox-sagene"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          type="checkbox"
          value="4"
        />
         
        <label
          for="checkbox-sthanshaugen"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          type="checkbox"
          value="5"
        />
         
        <label
          for="checkbox-frogner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          type="checkbox"
          value="6"
        />
         
        <label
          for="checkbox-ullern"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          type="checkbox"
          value="7"
        />
         
        <label
          for="checkbox-vestreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          type="checkbox"
          value="8"
        />
         
        <label
          for="checkbox-nordreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          type="checkbox"
          value="9"
        />
         
        <label
          for="checkbox-bjerke"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          type="checkbox"
          value="10"
        />
         
        <label
          for="checkbox-grorud"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          type="checkbox"
          value="11"
        />
         
        <label
          for="checkbox-stovner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          type="checkbox"
          value="12"
        />
         
        <label
          for="checkbox-alna"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          type="checkbox"
          value="13"
        />
         
        <label
          for="checkbox-ostensjo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          type="checkbox"
          value="14"
        />
         
        <label
          for="checkbox-nordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </div>
      <div
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          type="checkbox"
          value="15"
        />
         
        <label
          for="checkbox-sondrenordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </div>
       
      <div
        class="navigation-link navigation-link__label-compare"
        id="sammenlign"
      >
        <a
          class="navigation-link__label"
          href="#/bydel/alle"
          id="sammenlign-href"
        >
          Sammenlign bydeler
        </a>
      </div>
       
      <!---->
    </nav>
  </aside>
   
  <div
    id="content"
  >
    <header
      class="oslo__navigation-topbar"
    >
      <a
        class="oslo__navigation-topbar-button router-link-exact-active router-link-active"
        href="#/"
        id="backButton"
      >
        <i
          class="material-icons oslo__topbar"
        >
          arrow_back
        </i>
         
        <h4
          class="oslo__topbar oslo__topbar-text"
        >
          Velg bydel
        </h4>
      </a>
       
      <div
        class="navigation-topbar"
      >
        <button
          class="navigation-topbar__select"
          id="select"
        >
          <label
            class="label"
          >
            Velg tema
          </label>
           
          <span>
            
          </span>
           
          <i
            class="material-icons"
          >
            arrow_drop_down
          </i>
        </button>
         
        <!---->
      </div>
    </header>
     
    <main>
      <h1>
        Forside
      </h1>
    </main>
  </div>
</div>
`;
